fixed photo upload error

--- a/expert/templates/expert/layouts/base_layout.html
+++ b/expert/templates/expert/layouts/base_layout.html
@@ -27,8 +27,15 @@
         </div>
         <div class="dropdown">
             <button type="button" name="button" class="btn dropdown-toggle" id="dropdown-btn" data-toggle="dropdown">
-                <img src="{{ request.user.expertuser.expertform.photo.url }}" alt="profile" class="dropdown-img profile"
-                     height="45px">
+                {% if request.user.expertuser.expertform.photo %}
+                    <img src="{{ request.user.expertuser.expertform.photo.url }}" alt="profile"
+                         class="dropdown-img profile"
+                         height="45px">
+                {% else %}
+                    <img src="{% static 'expert/img/profile.jpg' %}" alt="profile"
+                         class="dropdown-img profile"
+                         height="45px">
+                {% endif %}
             </button>
             <ul class="dropdown-menu text-center" role="menu" aria-labelledby="dropdown-btn" id="dropdown">
                 <li><a href="{% url 'expert:userInfo' %}">اطلاعات کاربری</a></li>
@@ -48,8 +55,13 @@
     <div class="side-bar">
         <div class="topMargin"></div>
         <div class="expert-icon"></div>
-        <img src="{{ request.user.expertuser.expertform.photo.url }}" alt="Ehsan" class="profile" width="150px"
-             height="150px">
+        {% if request.user.expertuser.expertform.photo %}
+            <img src="{{ request.user.expertuser.expertform.photo.url }}" alt="Ehsan" class="profile" width="150px"
+                 height="150px">
+        {% else %}
+            <img src="{% static 'expert/img/profile.jpg' %}" alt="Ehsan" class="profile" width="150px"
+                 height="150px">
+        {% endif %}
         <h5>{% block name %}{% endblock %}</h5>
         <h6>استاد</h6>
         <p dir="rtl" class="scoreDiv text-right">امتیاز: <span>{{ score|default:3 }}</span>/10</p>
