--- a/researcher/templates/researcher/index.html
+++ b/researcher/templates/researcher/index.html
@@ -3,12 +3,12 @@
 {% block title %}پروژه ها{% endblock %}
 
 {% block dialog %}
-    {#    {% include 'researcher/layouts/initial_information.html' %}#}
+    {% include 'researcher/layouts/initial_information.html' %}
     {% include 'researcher/layouts/showProject.html' %}
     {% include 'researcher/layouts/vote_dialog.html' %}
 {% endblock %}
 
-{% block name %}رضا باسره{% endblock %}
+{% block name %}{{ request.user.researcheruser.researcherprofile }}{% endblock %}
 
 {% block content %}
     {% include 'researcher/layouts/projectList.html' %}
