--- a/researcher/templates/researcher/userInfo.html
+++ b/researcher/templates/researcher/userInfo.html
@@ -267,7 +267,7 @@
             },
           source: [
                  {"title": "histology", "key": "1", "folder": true, "children": [
-                     {"title": "Sterile Tissue Harvest", "key": "101", "folder": true, "childern":[
+                     {"title": "Sterile Tissue Harvest", "key": "101", "folder": true, "children":[
                             {"title": "Sterile Tissue Harvest", "key": "10101"},
                             {"title": "Diagnostic Necropsy and Tissue Harvest", "key": "10102"}
                             ]},
