--- a/researcher/static/researcher/css/style.css
+++ b/researcher/static/researcher/css/style.css
@@ -2076,7 +2076,7 @@ span.title-back{
 .fixed-back .card-head {
     position: absolute;
     top: 10px;
-    right: 10px;
+    right: 25px;
     font-weight: 400;
     font-size: 15px;
     color: #3ccd1c;
@@ -2131,7 +2131,7 @@ span.title-back{
     border: 1px solid #bdbdbd;
     width: 100% !important;
     right: 0!important;
-    padding: 6px 10px;
+    padding: 0;
     -webkit-border-radius: 0.25em;
     -moz-border-radius: 0.25em;
     border-radius: 0.5em;
@@ -2141,6 +2141,44 @@ span.title-back{
 .fixed-back .confirmation label:hover {
     cursor: pointer;
     box-shadow: 0 4px 10px 0 rgba(0,0,0,0.16);
+}
+.fixed-back .upload-resume + label {
+    position: relative;
+    border: 1px dashed #bdbdbd;
+    top: 0;
+    margin: 0;
+    right: 0!important;
+    padding: 10px;
+    width: 100%;
+    height: 100%;
+    -webkit-border-radius: 0.25em;
+    -moz-border-radius: 0.25em;
+    border-radius: 0.25em;
+    min-height: 0;
+    color: #bdbdbd;
+    background-color: #fdfdfd;
+    transition: none;
+    display: none;
+}
+.fixed-back .upload-resume + label svg {
+    width: 50px;
+    right: 50%;
+    transform: translateX(50%);
+    position: relative;
+    height: 50px;
+    display: block;
+}
+.fixed-back .upload-resume + label svg:nth-child(2) {
+    display: none;
+}
+.fixed-back .upload-resume + label:hover {
+    cursor: pointer;
+    border-color: #3ccd1c;
+    color: #3ccd1c;
+    background-color: #F8FDF7;
+}
+.fixed-back .confirmation .form-group {
+    margin: 0;
 }
 .fixed-back .confirmation input:checked + label {
     border-color: #3ccd1c;
@@ -2528,6 +2566,26 @@ span.title-back{
 ul.fancytree-container{
     border: none;
     background-color: inherit;
+    font-family: iranyekan, serif;
+}
+ul.fancytree-container ul {
+    padding: .3em 1em 0 0;
+}
+img.fancytree-icon, span.fancytree-checkbox, span.fancytree-icon {
+    margin-left: 0;
+    margin-right: 3px;
+}
+.fancytree-folder span.fancytree-title {
+    font-weight: 400;
+    margin-right: 5px;
+}
+span.fancytree-title{
+    margin-right: 5px;
+}
+span.fancytree-title:hover{
+    background-color: #dfdfdf;
+    border-radius: 0.25em;
+    margin-right: 6px;
 }
 .fancytree-treefocus span.fancytree-active span.fancytree-title {
     background-color: #89E076;
@@ -2557,20 +2615,28 @@ ul.nav-tabs{
     position: relative;
 }
 .add-new-technique{
-    padding: 8px 16px;
     position: relative;
     top: 0;
     left: 0;
     width: fit-content;
     display: inline-block;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    border-radius: 5px;
+    -webkit-border-radius: 0.25em;
+    -moz-border-radius: 0.25em;
+    border-radius: 0.25em;
     margin-left: 0!important;
+    margin-bottom: 5px;
     font-weight: 400;
+    border: none;
+    outline: none;
+    padding: 5px 15px;
+    text-align: center;
+    min-width: 100px;
+    background-color: #89E076;
+    color: #ffffff;
 }
 .add-new-technique:hover {
-    background-color: rgba(0, 0, 0, 0.05);
+    background-color: #3ccd1c;
+    /*background-color: rgba(0, 0, 0, 0.05);*/
     cursor: pointer;
 }
 .flow-root-display{
