--- a/industry/templates/industry/newProject.html
+++ b/industry/templates/industry/newProject.html
@@ -30,12 +30,12 @@
                             <div class="col-lg-6">
                                 <label for="id_project_title_persian">عنوان پروژه (به فارسی)</label>
                                 {% render_field form.project_title_persian class="w-100" %}
-                                {% render_field form.project_title_persian.errors class="w-100" %}
+                                {% render_field form.project_title_persian.errors %}
                             </div>
                             <div class="col-lg-6">
                                 <label for="id_project_title_english">عنوان پروژه (به لاتین)</label>
                                 {% render_field form.project_title_english class="w-100" %}
-                                {% render_field forms.project_title_english.errors class="w-100" %}
+                                {% render_field forms.project_title_english.errors %}
                             </div>
                         </div>
                         <div class="row" style="margin-top: 5px">
