removed profile image rename feature

--- a/industry/templates/industry/layouts/base_layout.html
+++ b/industry/templates/industry/layouts/base_layout.html
@@ -22,7 +22,7 @@
         <button type="button" name="button" class="btn dropdown-toggle" id="dropdown-btn" data-toggle="dropdown">
           <img
               {% if user.industryuser.industryform.photo %}
-                 src="/media/{{ user.industryuser.industryform.name }}/profile.jpg"
+                 src="/media/{{ user.industryuser.industryform.name }}/{{ user.industryuser.industryform.photo.name }}"
               {% else %}
                  src="{% static 'industry/img/profile.jpg' %}"
               {% endif %}
@@ -46,7 +46,7 @@
       <div class="expert-icon"></div>
       <img
               {% if user.industryuser.industryform.photo %}
-                 src="/media/{{ user.industryuser.industryform.name }}/profile.jpg"
+                 src="/media/{{ user.industryuser.industryform.name }}/{{ user.industryuser.industryform.photo.name }}"
               {% else %}
                  src="{% static 'industry/img/profile.jpg' %}"
               {% endif %}
