--- a/templates/registration/user_pass.html
+++ b/templates/registration/user_pass.html
@@ -21,7 +21,7 @@
         {{ form.non_field_errors }}
         <div class="username">
             <label for="username">نام کاربری</label>
-            <input type="text" id="username" name="username" value="{{ username }}" readonly>
+            <input type="text" id="username" name="username" value="{% firstof username request.user %}" readonly>
             <i class="fas fa-user-alt fa-lg"></i>
         </div>
         <div class="password">
