--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -27,7 +27,7 @@
             </div>
             <div class="password">
                 <label for="id_password">رمز عبور</label>
-                {{ error }}<br>
+                {{ error }}
                 {{ form.password|attr:"id:id_password" }}
                 {{ form.password.errors }}
                 <i class="fas fa-lock fa-lg"></i>
