--- a/expert/templates/expert/researcherRequest.html
+++ b/expert/templates/expert/researcherRequest.html
@@ -16,15 +16,13 @@
 
 {% block content %}
     <div class="row">
-        <div class="col-lg-12 info-card">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="researcher-request-info custom-border-title">
-                        <span class="title">محلول کشت سلولی</span>
-                        <span class="title-back"></span>
+        <div class="col-lg-12">
+            <div class="card info-card user-info text-right">
+                <div class="card-header">محلول کشت سلولی</div>
+                    <div class="inner-card card" style="margin-bottom: 0;">
                         <div class="researcher-request-info-innerDiv">
                             <div class="row">
-                                <div class="col-lg-6">
+                                <div class="col-lg-12">
                                     <div class="card researcher-info">
                                         <img src="{% static 'expert/img/photo.jpg' %}" alt="researcher-profile">
                                         <div class="researcher-info-innerDiv text-right">
@@ -44,21 +42,17 @@
                                             <span>10/</span>
                                             <span>4</span>
                                         </div>
-{#                                        <button class="show-researcher">مشاهده</button>#}
-{#                                        <button class="accept-researcher">تایید</button>#}
-{#                                        <button class="refuse-researcher">رد</button>#}
+{#                                                   <button class="show-researcher">مشاهده</button>#}
+{#                                                   <button class="accept-researcher">تایید</button>#}
+{#                                                   <button class="refuse-researcher">رد</button>#}
                                         <button class="researcher-card-button-show">مشاهده</button>
                                         <button class="researcher-card-button-check">تایید</button>
-                                        <button class="researcher-card-button-close"><i class="material-icons">close</i> </button>
+                                        <div class="close"></div>
                                     </div>
-                                </div>
-                                <div class="col-lg-6">
-
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
             </div>
         </div>
     </div>
